# awl

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
crates/awl/: Cargo.toml
crates/awl/src/: app.rs  event_loop.rs  filetree.rs  git.rs  highlight.rs  icons.rs  main.rs  menu_events.rs  popup.rs  render.rs  session.rs
crates/awl/src/app/: events.rs  mod.rs
crates/awl/src/breadcrumb/: mod.rs
crates/awl/src/config/: mod.rs
crates/awl/src/editor/: actions.rs  cursor.rs  gutter.rs  keybindings.rs  mod.rs  save.rs  selection.rs  view.rs
crates/awl/src/explorer/: icons.rs  mod.rs
crates/awl/src/git/: diff.rs  mod.rs
crates/awl/src/highlight/: grammars.rs  mod.rs
crates/awl/src/input/: clipboard.rs  mouse.rs
crates/awl/src/language/: lsp_dispatch.rs  mod.rs
crates/awl/src/popup/: context.rs  finder.rs  finder_events.rs  mod.rs
crates/awl/src/statusbar/: view.rs
crates/awl/src/swap/: mod.rs
crates/awl/src/tabs/: actions.rs  naming.rs  view.rs
crates/awl/src/theme/: loader.rs  mod.rs
src/awl-core/: Cargo.toml
src/awl-core/src/: event_loop.rs  layout.rs  main.rs  render.rs  session.rs
src/awl-core/src/app/: events.rs  mod.rs
src/awl-core/src/breadcrumb/: mod.rs
src/awl-core/src/config/: mod.rs
src/awl-core/src/editor/: actions.rs  cursor.rs  gutter.rs  keybindings.rs  mod.rs  scrollbar.rs  selection.rs  view.rs
src/awl-core/src/explorer/: actions.rs  icons.rs  keyboard.rs  tree.rs  view.rs
src/awl-core/src/git/: diff.rs
src/awl-core/src/highlight/: grammars.rs  mod.rs
src/awl-core/src/input/: clipboard.rs  mouse.rs  text.rs
src/awl-core/src/language/: lsp_dispatch.rs  mod.rs
src/awl-core/src/popup/: card.rs  context.rs  dialog.rs  (+2 more)
(+65 files in other folders)
