[package]
name = "awl"
version = "0.1.0"
edition = "2024"

[dependencies]
editor = { path = "../editor" }
ui = { path = "../ui" }
lsp = { path = "../lsp" }
termion = "4"
arboard = "3"
ropey = "1"
tree-sitter          = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-language = "0.1"
tree-sitter-c          = "0.23"
tree-sitter-cpp        = "0.23"
tree-sitter-rust       = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-css        = "0.25"
tree-sitter-cmake      = { git = "https://github.com/uyha/tree-sitter-cmake" }
tree-sitter-json       = "0.24"
tree-sitter-ini        = "1"
tree-sitter-typescript = "0.23"
