[package]
name = "awl-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "awl"
path = "src/main.rs"

[dependencies]
buffer = { path = "../awl-editor", package = "awl-editor" }
ui = { path = "../awl-tui", package = "awl-tui" }
lsp = { path = "../awl-lsp", package = "awl-lsp" }
termion = "4"
arboard = "3"
notify = "6"
ropey = "1"
tree-sitter          = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-language = "0.1"
tree-sitter-c          = "0.23"
tree-sitter-cpp        = "0.23"
tree-sitter-rust       = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-css        = "0.25"
tree-sitter-cmake      = { git = "https://github.com/uyha/tree-sitter-cmake" }
tree-sitter-json       = "0.24"
tree-sitter-ini        = "1"
tree-sitter-typescript = "0.23"
tree-sitter-md         = { package = "tree-sitter-md-025", version = "0.5" }
serde = { version = "1", features = ["derive"] }
toml  = "0.8"
tree-sitter-bash = "0.25"
